@@ -141,7 +141,6 @@ Config =
     # Thread related
     'watch':              ['w',      'Watch thread.']
     'update':             ['u',      'Update the thread now.']
-    'read thread':        ['r',      'Mark thread as read.']
     # Images
     'expand image':       ['E',      'Expand selected image.']
     'expand images':      ['e',      'Expand all images.']
