@@ -21,6 +21,7 @@ alpha
   Added Thread & Post Hiding in the Menu, with individual settings.
   Thread & Post Hiding Buttons can now be disabled in the settings.
   Recursive Hiding will be automatically applied when manually hiding a post.
+  Visible posts will not be taken into account towards the unread count.
   Fix Chrome's install warning saying that 4chan X would execute on all domains.
   Fix Quote Backlinks not affecting inlined quotes.
   Fix Quote Highlighting not affecting inlined quotes.
